# CoppeliaSimMobileRobots

./: LICENSE  README.md  interface_setup.bash
models/: camera_car.ttm  camera_diff_drive_robot.ttm
ros2_ws/src/bringup/: CMakeLists.txt  package.xml
ros2_ws/src/bringup/launch/: bringup.launch.py
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/control/control/: localization.py  point_controller.py  position_controller.py
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/msg/: SphereDetection.msg
ros2_ws/src/sim_diff_drive_behavior/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_diff_drive_behavior/sim_diff_drive_behavior/: local_trajectory_sphere_fsm.py  (+1 more)
ros2_ws/src/sim_diff_drive_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/sim_diff_drive_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_diff_drive_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_diff_drive_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/vision/: package.xml  setup.py
scenes/: camera_car.ttt  green_sphere_following.ttt  local_path_FSM.ttt  snake_robot.ttt
scripts/: differential_drive.lua
scripts/lua/: differential_drive.lua  image_publisher.lua  n_proximity_sensors.lua  n_spheres_custom.lua  n_spheres_script.lua  n_spheres_script_old.lua  simulation_time_publisher.lua  single_proximity_sensor.lua  sphere_script.lua  spheres_script.lua
scripts/lua/lua/: differential_drive.lua  image_publisher.lua
scripts/lua/python/: sphere_movement.py
scripts/python/: image_capture.py  sphere_movement.py
(+17 files in other folders)
